# juniper-interfaces-bug

./: Cargo.toml
src/: main.rs
