[package]
name = "juniper_interface"
version = "0.1.0"
authors = ["Vitaly Domnikov <dotcypress@gmail.com>"]
edition = "2018"

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b" }
env_logger = "0.8.1"
futures = "0.3.1"
log = "0.4.8"
reqwest = { version = "0.10", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2"